--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
             <div class="right"></div>
             <div class="cover"></div>
             <div class="paper"><table style="margin:auto">
-              <tr><td>Twitter:</td><td><a href="https://twitter.com/_SEG_FAULT" target="_blank">_SEG_FAULT</a></td></tr>
+              <tr><td>Twitter:</td><td>Deleted</td></tr>
               <tr><td>Github:</td><td><a href="https://github.com/kage-sakura" target="_blank">kage-sakura</a></td></tr>
-              <tr><td>Discord:</td><td>靈/影桜#1137</td></tr>
+              <tr><td>Discord:</td><td>靈影桜/kage-sakura#7416</td></tr>
             </table></div>
           </div>
         </div>
