--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="cover"></div>
             <div class="paper"><table style="margin:auto">
               <tr><td>Twitter:</td><td>Deleted</td></tr>
-              <tr><td>Github:</td><td><a href="https://github.com/kage-sakura" target="_blank">kage-sakura</a></td></tr>
+              <tr><td>Github:</td><td><a href="https://github.com/wvad" target="_blank">kage-sakura</a></td></tr>
               <tr><td>Discord:</td><td>靈影桜/kage-sakura#7416</td></tr>
             </table></div>
           </div>
